recursion.lessons.recursion.tree.Tree.scala.error
Tree:7: error: type mismatch;
 found   : Unit
 required: Double
    tree(steps-1,length,length*shrink, gauche(2*angle))
                                             ^